--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,5 @@
     @apply py-2 px-3 rounded-md placeholder:font-medium
 }
 .myBtn{
-    @apply bg-gradient-to-r from-[#77432026] to-[#E8C58026] px-3 py-3
+    @apply bg-gradient-to-r from-[#77432026] to-[#E8C58026] px-3 py-3 rounded-md
 }
